<resources>
    <string name="app_name">AcessoriosAutomoveis</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Menu Principal</string>
    <string name="sobre_fragment_label">Sobre </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="acessorios_exterior">Acessorios Exterior</string>
    <string name="acessorios">Acessorios</string>
    <string name="acessorios_interior">Acessorios Interior</string>
    <string name="sobre">Sobre</string>
    <string name="acess">Acessorios</string>
    <string name="andre_lameiras">Andre Lameiras</string>
    <string name="n_1700017">Nº 1700017</string>
    <string name="a_aplica_ao_mostra_acessorios_para_o_interior_e_o_exterior_para_carros">A aplicaçao mostra acessorios para o interior e o exterior para carros</string>


    <string name="lista_carros_label">Carros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carros">carros</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="acessorios_de_interior">Acessorios de Interior</string>
    <string name="marca">Marca</string>
    <string name="cor">Cor</string>
    <string name="acessorios_de_exterior">Acessorios de Exterior</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="marca_obrigatoria">Deve preencher a marca</string>
    <string name="cor_obrigatoria">Deve preencher a cor</string>
    <string name="carro_guardado_com_sucesso">CArro guardado com sucesso</string>
    <string name="erro_guardar_carro">Não foi possível guardar o carro</string>

    <string name="carro_eliminado_com_sucesso">Carro eliminado com sucesso</string>
    <string name="erro_eliminar_carro">Erro ao eliminar carro</string>
    <string name="nome">Nome</string>
    <string name="nome_obrigatorio">Nome obrigatorio</string>
    <string name="classe_obrigatoria">Classe obrigatoria</string>
    <string name="descricao_obrigatoria">Descriçao obrigatoria</string>
    <string name="erro_guadar_acessorio_interior">Erro ao guardar acessorio de interior</string>
    <string name="acessorio_int_guardado_com_sucesso">Acessorio de interior guardados com sucesso</string>
    <string name="categoria_obrigatoria">Categoria obrigatoria</string>
    <string name="erro_guadar_acessorio_exterior">Erro ao guardar o acessorio exterior</string>
    <string name="acessorio_ext_guardado_com_sucesso">Acessorior exterior guardado com sucesso</string>
    <string name="classe">Classe</string>
    <string name="descricao">Descriçao</string>
    <string name="categoria">Categoria</string>

    <string name="acessorio_eliminado_com_sucesso">Acessorio eliminado com sucesso</string>
    <string name="erro_eliminar_acessorio">Erro ao eliminar acessorio</string>
    <string name="editar_ace_int_label">Editar acessorio interior label</string>
    <string name="novo_ace_int_label">Novo acessorio interior label</string>
    <string name="editar_ace_ext_label">Editar acessorio de exterior label</string>
    <string name="novo_ace_ext_label">Novo acessorio exterior label</string>


</resources>