<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".EliminarAcessExtFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewNomeAceExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Antena" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewCategoriaAceExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="AutoCubo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cor"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewCorAceExt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Branco" />
</LinearLayout>