<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".EliminarAcesIntFragment" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewNomeAcesIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Tapetes" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/classe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewClasseAceInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Norauto" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descricao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F83D03" />

    <TextView
        android:id="@+id/textViewDescricaoAceInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Conjunto de tapetes alcatifa" />
</LinearLayout>