<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.acessoriosautomoveis.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaCarrosFragment"
            app:destination="@id/listaCarrosFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaAcessInteriorFragment"
            app:destination="@id/listaAcessInteriorFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaAcessExtFragment"
            app:destination="@id/listaAcessExtFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.ipg.acessoriosautomoveis.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaCarrosFragment"
        android:name="pt.ipg.acessoriosautomoveis.ListaCarrosFragment"
        android:label="fragment_lista_carros"
        tools:layout="@layout/fragment_lista_carros" >
        <action
            android:id="@+id/action_listaCarrosFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_listaCarrosFragment_to_novoCarroFragment"
            app:destination="@id/novoCarroFragment" />
        <action
            android:id="@+id/action_listaCarrosFragment_to_eliminarCarroFragment"
            app:destination="@id/eliminarCarroFragment" />
    </fragment>
    <fragment
        android:id="@+id/novoCarroFragment"
        android:name="pt.ipg.acessoriosautomoveis.NovoCarroFragment"
        android:label="fragment_novo_carro"
        tools:layout="@layout/fragment_novo_carro" >
        <action
            android:id="@+id/action_novoCarroFragment_to_listaCarrosFragment"
            app:destination="@id/listaCarrosFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminarCarroFragment"
        android:name="pt.ipg.acessoriosautomoveis.EliminarCarroFragment"
        android:label="fragment_eliminar_carro"
        tools:layout="@layout/fragment_eliminar_carro" >
        <action
            android:id="@+id/action_eliminarCarroFragment_to_listaCarrosFragment"
            app:destination="@id/listaCarrosFragment" />
        <argument
            android:name="Carro"
            app:argType="pt.ipg.acessoriosautomoveis.Carro" />
    </fragment>
    <fragment
        android:id="@+id/novoAcessInteriorFragment"
        android:name="pt.ipg.acessoriosautomoveis.NovoAcessInteriorFragment"
        android:label="fragment_novo_acess_interior"
        tools:layout="@layout/fragment_novo_acess_interior" />
    <fragment
        android:id="@+id/listaAcessInteriorFragment"
        android:name="pt.ipg.acessoriosautomoveis.ListaAcessInteriorFragment"
        android:label="@string/acessorios_de_interior"
        tools:layout="@layout/fragment_lista_acess_interior">
        <action
            android:id="@+id/action_listaAcessInteriorFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaAcessExtFragment"
        android:name="pt.ipg.acessoriosautomoveis.ListaAcessExtFragment"
        android:label="@string/acessorios_de_exterior"
        tools:layout="@layout/fragment_lista_acess_ext">
        <action
            android:id="@+id/action_listaAcessExtFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
</navigation>